favicon and some open graph tags

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <link rel="icon" href="/favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta property="og:title" content="Jacob's Farming Contests" />
+        <meta property="og:type" content="website" />
+        <meta property="og:description" content="Simple tracker for Jacob's contests in Hypixel Skyblock" />
+        <meta property="og:url" content="https://sky.matcool.tk/" />
+        <meta property="og:image" content="https://sky.matcool.tk/icon.png" />
+        <meta property="og:image:width" content="128" />
+        <meta property="og:image:height" content="128" />
         <title>Jacob's Farming Contests</title>
     </head>
     <body>
